View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026736 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-09-29 15:48 | 2016-04-20 15:49 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026736: Errors in BRepOffsetAPI_MakeOffset: overlapping arcs are processed incorrect in mode GeomAbs_Intersection | ||||
Description | Errors in BRepOffsetAPI_MakeOffset: overlapping arcs are processed incorrect in mode GeomAbs_Intersection. This bug appears when non-adjacent curvilinear elements of resulting shape overlap each other. | ||||
Steps To Reproduce | restore arc1.brep a wire ww a donly ww mkoffset res1 ww 10 8 i fit circle c1 7 0 0 5 circle c2 -7 0 0 0 0 1 0 1 0 5 trim c1 c1 pi/2 3*pi/2 trim c2 c2 pi 2*pi mkedge e1 c1 mkedge e2 c2 polyline pp1 -7 5 0 -7 30 0 7 30 0 7 5 0 polyline pp2 7 -5 0 7 -30 0 -7 -30 0 -7 -5 0 wire ww pp1 e1 pp2 e2 donly ww fit mkoffset res2 ww 1 -3. i | ||||
Additional information and documentation updates | Modified entity: BRepFill_TrimEdgeTool modified method: IntersectWith now the case of multiple intersection of offset arcs is distinguished from the case of extra-intersection of prolonged offset curves. | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26736_1, bug26736_2 | ||||
2015-09-29 15:59 developer |
arc1.brep (524 bytes) |
|
Branch CR26736 has been created by jgv. SHA-1: 1301bc0785bfbaad422e7d189c94be89578de6b4 Detailed log of new commits: Author: jgv Date: Tue Sep 29 17:15:01 2015 +0300 0026736: Errors in BRepOffsetAPI_MakeOffset: overlapping arcs are processed incorrect in mode GeomAbs_Intersection |
|
Please review the branch CR26736. |
|
Branch CR26736 has been updated by jgv. SHA-1: fc6922172863fde46399ee493848b8b540fbe654 Detailed log of new commits: Author: jgv Date: Wed Sep 30 15:47:49 2015 +0300 Comments have been added. |
|
Branch CR26736 has been updated by jgv. SHA-1: 36daf974cde4e92820e75ade067216b5360636ce Detailed log of new commits: Author: jgv Date: Wed Sep 30 15:54:37 2015 +0300 Small correction |
|
Reviewed. |
|
Dear BugMaster, Branch CR26736 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 36daf974cde4e92820e75ade067216b5360636ce There are following compilation errors: Linux: http://jenkins-test-02.nnov.opencascade.com:8080/view/CR26736-master/job/CR26736-master_build_occt_linux/1/parsed_console/ ../../../../src/BRepFill/BRepFill_OffsetWire.cxx:1310:44: error: passing 'const opencascade::handle<Geom2d_TrimmedCurve>' as 'this' argument of 'opencascade::handle<T>::operator opencascade::handle<T2>&() [with T2 = Geom2d_Curve; <template-parameter-2-2> = void; T = Geom2d_TrimmedCurve]' discards qualifiers [-fpermissive] Windows: http://jenkins-test-02.nnov.opencascade.com:8080/view/CR26736-master/job/CR26736-master_build_occt_windows_64/1/parsed_console/ 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(587): error C2079: 'V1' uses undefined class 'TopoDS_Vertex' [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(587): error C2079: 'V2' uses undefined class 'TopoDS_Vertex' [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(588): error C2653: 'TopExp' : is not a class or namespace name [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(588): error C3861: 'Vertices': identifier not found [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(589): error C2228: left of '.IsSame' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is 'int' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(590): error C2228: left of '.IsSame' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is 'int' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(592): error C2228: left of '.IsSame' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is 'int' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(593): error C2228: left of '.IsSame' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is 'int' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(596): error C2065: 'BRepAdaptor_Curve' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(596): error C2146: syntax error : missing ';' before identifier 'IC1' [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(596): error C3861: 'IC1': identifier not found [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(597): error C2065: 'IC1' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(597): error C2228: left of '.GetType' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is ''unknown-type'' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(599): error C2065: 'IC1' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(599): error C2228: left of '.LastParameter' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is ''unknown-type'' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(599): error C2065: 'IC1' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(599): error C2228: left of '.FirstParameter' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is ''unknown-type'' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(606): error C2065: 'IC1' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(606): error C2228: left of '.LastParameter' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is ''unknown-type'' 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(606): error C2065: 'IC1' : undeclared identifier [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] 84>..\..\..\src\BRepFill\BRepFill_TrimEdgeTool.cxx(606): error C2228: left of '.FirstParameter' must have class/struct/union [d:\builds\vc10\CR26736-master-occt-64\adm\msvc\vc10\TKBool.vcxproj] type is ''unknown-type'' MacOS: http://jenkins-test-02.nnov.opencascade.com:8080/view/CR26736-master/job/CR26736-master_prepare_build_occt_MacOS/1/parsed_console/ /Users/mnt/tools/WOK680/wok_entities/LOC/dev/CR26736-master-occt/src/BRepFill/BRepFill_TrimEdgeTool.cxx:587:21: error: variable has incomplete type 'TopoDS_Vertex' TopoDS_Vertex V1, V2; ^ /Users/mnt/tools/WOK680/wok_entities/LOC/dev/CR26736-master-occt/src/BRepFill/BRepFill_TrimEdgeTool.cxx:587:25: error: variable has incomplete type 'TopoDS_Vertex' TopoDS_Vertex V1, V2; ^ /Users/mnt/tools/WOK680/wok_entities/LOC/dev/CR26736-master-occt/src/BRepFill/BRepFill_TrimEdgeTool.cxx:588:7: error: use of undeclared identifier 'TopExp' TopExp::Vertices(InitEdge1, V1, V2); ^ /Users/mnt/tools/WOK680/wok_entities/LOC/dev/CR26736-master-occt/src/BRepFill/BRepFill_TrimEdgeTool.cxx:596:5: error: unknown type name 'BRepAdaptor_Curve' BRepAdaptor_Curve IC1(InitEdge1); |
|
Branch CR26736 has been updated by jgv. SHA-1: 22dd7a9ec98be7a239fcf3249e567135b0ea665f Detailed log of new commits: Author: jgv Date: Fri Oct 2 15:31:57 2015 +0300 Correction of compiling errors |
|
Branch CR26736 is updated. Please test. |
|
Branch CR26736 has been updated forcibly by mkv. SHA-1: 81c42bd0edb271bf73b32624433342eeb037404b |
|
Dear BugMaster, Branch CR26736 was rebased on current master of occt git-repository. SHA-1: 81c42bd0edb271bf73b32624433342eeb037404b |
|
Dear BugMaster, Branch CR26736 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 81c42bd0edb271bf73b32624433342eeb037404b Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26736-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26736-master-occt-64/Windows-64-VC10/summary.html Testing cases: http://occt-tests/CR26736-master-occt-64/Debian70-64/bugs/modalg_6/bug26736_1.html http://occt-tests/CR26736-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26736_1.html bugs modalg_6 bug26736_1: FAILED http://occt-tests/CR26736-master-occt-64/Debian70-64/bugs/modalg_6/bug26736_2.html http://occt-tests/CR26736-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26736_2.html bugs modalg_6 bug26736_2: OK Testing on Linux: occt component : Total MEMORY difference: 92429708 / 92236686 [+0.21%] Total CPU difference: 19464.209999999828 / 19547.219999999827 [-0.42%] products component : Total MEMORY difference: 26347389 / 26369733 [-0.08%] Total CPU difference: 7591.449999999975 / 7378.749999999995 [+2.88%] Testing on Windows: occt component : Total MEMORY difference: 58054571 / 58061072 [-0.01%] Total CPU difference: 18468.053584199286 / 18215.81556729896 [+1.38%] products component : Total MEMORY difference: 17178463 / 17183716 [-0.03%] Total CPU difference: 5706.235778199968 / 5689.09126829997 [+0.30%] There are no differences in images found by testdiff. |
|
Dear jgv, Branch CR26736 has been rejected due to: - regressions/differences/improvements - failed test-case for issue ============================== |
|
Branch CR26736 has been updated by mkv. SHA-1: 411feb7b9d613527ea1980c2efdca727b84f7603 Detailed log of new commits: Author: mkv Date: Mon Oct 5 15:37:03 2015 +0300 Test cases for issue CR26736 |
|
Dear jgv, could you please review following test case bugs modalg_6 bug26736_1, bug26736_2 |
|
Branch CR26736-2 has been created by jgv. SHA-1: 4ca85dfa6d2dec832914a3f8988028f780f4b51e Detailed log of new commits: Author: jgv Date: Wed Oct 7 17:56:38 2015 +0300 0026736: Errors in BRepOffsetAPI_MakeOffset: overlapping arcs are processed incorrect in mode GeomAbs_Intersection |
|
Dear Mikhail! Please test new branch CR26736-2. Please also fix the mistake in test script bugs modalg_6 bug26736_1: there must be "mkoffset result ww 10 8 i" instead of "mkoffset result 10 8 i". |
|
Dear BugMaster, Branch CR26736-2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4ca85dfa6d2dec832914a3f8988028f780f4b51e Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26736-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26736_1.html http://occt-tests/CR26736-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26736_1.html bugs modalg_6 bug26736_1: OK http://occt-tests/CR26736-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26736_2.html http://occt-tests/CR26736-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26736_2.html bugs modalg_6 bug26736_2: OK Testing on Linux: occt component : Total MEMORY difference: 92436186 / 92367034 [+0.07%] Total CPU difference: 19805.659999999778 / 19809.669999999824 [-0.02%] products component : Total MEMORY difference: 26315727 / 26369733 [-0.20%] Total CPU difference: 7358.889999999988 / 7378.749999999995 [-0.27%] Testing on Windows: occt component : Total MEMORY difference: 58069254 / 58086976 [-0.03%] Total CPU difference: 18763.956280998766 / 18228.45164829895 [+2.94%] products component : Total MEMORY difference: 17179163 / 17183716 [-0.03%] Total CPU difference: 6111.885178499989 / 5689.09126829997 [+7.43%] There are no differences in images found by testdiff. |
|
Branch CR26736-2 has been updated by mkv. SHA-1: 2267adbaa797c7e508f67399eea98731bc9c769c Detailed log of new commits: Author: mkv Date: Thu Oct 8 14:29:20 2015 +0300 Test cases for issue CR26736 |
|
Dear BugMaster, Branch CR26736-2 is TESTED. |
|
Branch CR26736 has been deleted by kgv. SHA-1: 411feb7b9d613527ea1980c2efdca727b84f7603 |
|
Branch CR26736-2 has been deleted by kgv. SHA-1: 2267adbaa797c7e508f67399eea98731bc9c769c |
occt: master 46767247 2015-10-07 14:56:38
Committer: bugmaster Details Diff |
0026736: Errors in BRepOffsetAPI_MakeOffset: overlapping arcs are processed incorrect in mode GeomAbs_Intersection Test cases for issue CR26736 |
Affected Issues 0026736 |
|
mod - src/BRepFill/BRepFill_OffsetWire.cxx | Diff File | ||
mod - src/BRepFill/BRepFill_TrimEdgeTool.cxx | Diff File | ||
mod - src/BRepFill/BRepFill_TrimEdgeTool.hxx | Diff File | ||
add - tests/bugs/modalg_6/bug26736_1 | Diff File | ||
add - tests/bugs/modalg_6/bug26736_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-09-29 15:48 |
|
New Issue | |
2015-09-29 15:48 |
|
Assigned To | => jgv |
2015-09-29 15:57 |
|
Steps to Reproduce Updated | |
2015-09-29 15:59 |
|
File Added: arc1.brep | |
2015-09-29 17:15 | git | Note Added: 0046280 | |
2015-09-29 17:20 |
|
Note Added: 0046281 | |
2015-09-29 17:20 |
|
Assigned To | jgv => msv |
2015-09-29 17:20 |
|
Status | new => resolved |
2015-09-30 15:48 | git | Note Added: 0046327 | |
2015-09-30 15:54 | git | Note Added: 0046328 | |
2015-09-30 15:55 |
|
Note Added: 0046329 | |
2015-09-30 15:55 |
|
Assigned To | msv => bugmaster |
2015-09-30 15:55 |
|
Status | resolved => reviewed |
2015-09-30 18:39 |
|
Assigned To | bugmaster => mkv |
2015-10-01 12:19 |
|
Note Added: 0046361 | |
2015-10-01 12:19 |
|
Assigned To | mkv => jgv |
2015-10-01 12:19 |
|
Status | reviewed => assigned |
2015-10-02 15:32 | git | Note Added: 0046401 | |
2015-10-02 15:50 |
|
Note Added: 0046404 | |
2015-10-02 15:50 |
|
Assigned To | jgv => mkv |
2015-10-02 15:50 |
|
Status | assigned => resolved |
2015-10-02 15:51 |
|
Assigned To | mkv => bugmaster |
2015-10-02 15:51 |
|
Status | resolved => reviewed |
2015-10-02 16:04 |
|
Assigned To | bugmaster => mkv |
2015-10-02 17:55 | git | Note Added: 0046420 | |
2015-10-05 15:20 |
|
Note Added: 0046466 | |
2015-10-05 15:21 |
|
Note Added: 0046467 | |
2015-10-05 15:22 |
|
Note Added: 0046468 | |
2015-10-05 15:22 |
|
Assigned To | mkv => jgv |
2015-10-05 15:22 |
|
Status | reviewed => assigned |
2015-10-05 15:37 | git | Note Added: 0046469 | |
2015-10-05 15:37 |
|
Note Added: 0046470 | |
2015-10-05 15:38 |
|
Test case number | => bugs modalg_6 bug26736_1, bug26736_2 |
2015-10-07 17:56 | git | Note Added: 0046574 | |
2015-10-07 18:02 |
|
Note Added: 0046576 | |
2015-10-07 18:02 |
|
Assigned To | jgv => mkv |
2015-10-07 18:02 |
|
Status | assigned => resolved |
2015-10-07 18:03 |
|
Status | resolved => reviewed |
2015-10-08 14:32 |
|
Note Added: 0046598 | |
2015-10-08 14:32 | git | Note Added: 0046599 | |
2015-10-08 14:33 |
|
Note Added: 0046600 | |
2015-10-08 14:33 |
|
Assigned To | mkv => bugmaster |
2015-10-08 14:33 |
|
Status | reviewed => tested |
2015-10-16 13:18 | bugmaster | Changeset attached | => occt master 46767247 |
2015-10-16 13:18 | bugmaster | Status | tested => verified |
2015-10-16 13:18 | bugmaster | Resolution | open => fixed |
2015-10-16 16:58 | git | Note Added: 0047100 | |
2015-10-16 16:58 | git | Note Added: 0047101 | |
2015-11-20 12:43 |
|
Additional Information Updated | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |